--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "type-check:watch": "npm run type-check -- --watch"
   },
   "dependencies": {
+    "immer": "^5.3.2",
     "react-dnd": "^10.0.2",
     "react-dnd-html5-backend": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.7.5",
     "@babel/preset-react": "^7.7.4",
     "@babel/preset-typescript": "^7.7.7",
