--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@wessberg/rollup-plugin-ts": "^1.2.2",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "rimraf": "^3.0.0",
