--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "clean": "rimraf lib",
     "build": "npm run clean && rollup -c rollup.config.js",
     "prepublishOnly": "npm run build",
-    "lint": "tslint -c tslint.json -p tsconfig.json",
-    "lint:fix": "tslint -c tslint.json -p tsconfig.json --fix",
+    "lint": "eslint src/**/*.ts src/**/*.tsx -c .eslintrc.json",
+    "lint:fix": "eslint src/**/*.ts src/**/*.tsx -c .eslintrc.json --fix",
     "dev": "rollup -c ./example/rollup.config.js -w & serve ./example/dist",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch"
@@ -20,25 +20,28 @@
     "react-dnd-html5-backend": "^10.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.7",
+    "@babel/core": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.7.5",
-    "@babel/preset-react": "^7.7.4",
-    "@babel/preset-typescript": "^7.7.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/preset-typescript": "^7.8.3",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
-    "@wessberg/rollup-plugin-ts": "^1.2.2",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
+    "@wessberg/rollup-plugin-ts": "^1.2.13",
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "rimraf": "^3.0.0",
-    "rollup": "^1.28.0",
+    "rollup": "^1.29.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "serve": "^11.3.0",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.4"
+    "typescript": "^3.7.5"
   },
   "peerDependencies": {
     "react": "^16.12.0",
