--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,12 +36,15 @@
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-use-before-define": "off",
+        "@typescript-eslint/triple-slash-reference": "off",
+        "sort-imports": "warn",
         "@typescript-eslint/interface-name-prefix": [
             "warn",
             {
                 "prefixWithI": "always"
             }
         ],
+        "react/display-name": "off",
         "react-hooks/rules-of-hooks": "off", // Checks rules of Hooks
         "react-hooks/exhaustive-deps": "off", // Checks effect dependencies
         "indent": [
