--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
         "react/display-name": "off",
         "react-hooks/rules-of-hooks": "off", // Checks rules of Hooks
         "react-hooks/exhaustive-deps": "off", // Checks effect dependencies
+        "eol-last": "warn",
         "indent": [
             "error",
             2
