--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rimraf lib",
     "build": "npm run clean && rollup -c rollup.config.js",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run lint && npm run build",
     "lint": "eslint src/**/*.ts src/**/*.tsx -c .eslintrc.json",
     "lint:fix": "eslint src/**/*.ts src/**/*.tsx -c .eslintrc.json --fix",
     "dev": "rollup -c ./example/rollup.config.js -w & serve ./example/dist",
