--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,16 @@
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-use-before-define": "off",
         "@typescript-eslint/triple-slash-reference": "off",
+        "@typescript-eslint/member-delimiter-style": ["warn", {
+            "multiline": {
+                "delimiter": "semi",
+                "requireLast": true
+            },
+            "singleline": {
+                "delimiter": "semi",
+                "requireLast": true
+            }
+        }],
         "sort-imports": "off",
         "@typescript-eslint/interface-name-prefix": [
             "warn",
