--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,6 +54,7 @@
                 "prefixWithI": "always"
             }
         ],
+        "react/prop-types": "off",
         "react/display-name": "off",
         "react-hooks/rules-of-hooks": "off", // Checks rules of Hooks
         "react-hooks/exhaustive-deps": "off", // Checks effect dependencies
